--- a/.github/workflows/kdevbot.yml
+++ b/.github/workflows/kdevbot.yml
@@ -35,9 +35,9 @@ jobs:
           token: ${{ steps.auth.outputs.token }}
           repository: KatsuteDev/kdevbot-internal
           ref: ${{ inputs.ref }}
-          path: .kdevbot
+          path: kdevbot
 
       - name: kdevbot[bot]
-        uses: .kdevbot
+        uses: ./kdevbot
         with:
           token: ${{ steps.auth.outputs.token }}
